# bashmemo

./: .bumpver.toml  README.md  main.py  old.setup.py  pyproject.toml  requirements.txt  setup.py
bashmemo/: main.py  utils.py
src/bashmemo/: config.py  main.py  utils.py
