[build-system]
requires = [
    "setuptools",  #Use to build python library into a python package
    "wheel",   # Use to distribute packages
    "bumpver"
]

[tool.bumpver]
#current_version = "2024.1023-alpha"
#version_pattern = "YYYY.BUILD[-TAG]"
current_version = "2024"
version_pattern = "YYYY"

commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

# To modify the version in files
#[tool.bumpver.file_patterns]
#"pyproject.toml" = [
#    'current_version = "{version}"',
#]

#"setup.py" = [
#    "{version}",
#    "{pep440_version}",
#]
#"README.md" = [
#    "# Bash Memo {version}",
#    "{pep440_version}",
#]



