[build-system]
requires = [
    "setuptools",  #Use to build python library into a python package
    "wheel",   # Use to distribute packages
    "bumpver"
]

[tool.bumpver]
#current_version = "2024.1023-alpha"
#version_pattern = "YYYY.BUILD[-TAG]"
current_version = "2024.1029"
version_pattern = "YYYY.BUILD"

commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[files.bumpver]
files = ["README.md"]

# Define the files where the version should be updated
[files.bumpver."README.md"]
#pattern = '(v\d{4}\.\d{4}-[a-z]+)'
pattern = '(v\d{4}\.\d{4})'

replacement = "v{version}"

# To modify the version in files
#[tool.bumpver.file_patterns]
#"pyproject.toml" = [
#    'current_version = "{version}"',
#]

#"setup.py" = [
#    "{version}",
#    "{pep440_version}",
#]
#"README.md" = [
#    "# Bash Memo {version}",
#    "{pep440_version}",
#]



