[build-system]
requires = [
    "setuptools",  #Use to build python library into a python package
    "wheel",   # Use to distribute packages
    "bumpver"
]

[tool.bumpver]
current_version = "2024.1041-alpha"
version_pattern = "YYYY.BUILD-TAG"


commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.files]
files = ["pyproject.toml", "README.md"]

# For README.md file, define the regex pattern to match version format
[tool.bumpver.files."README.md"]
pattern = 'v(\d{4}\.\d{4}-[a-zA-Z]+)'  # Update with the regex matching your version format
replacement = "v{version}"

# To modify the version in files
#[tool.bumpver.file_patterns]
#"pyproject.toml" = [
#    'current_version = "{version}"',
#]

#"setup.py" = [
#    "{version}",
#    "{pep440_version}",
#]
#"README.md" = [
#    "# Bash Memo {version}",
#    "{pep440_version}",
#]



